# mate-2026-blue-lobster

./: .gitignore  Justfile  Makefile  README.md  app.py  client.py  imgui.ini  justfile  libPgm.dylib  mate.ini  monkeyseecrab.py  pgm.swift  photogrammetry.py  pyproject.toml  requirements.txt  video_stream.py
2025/: sid.py
app/: app.py  how_to_run.md  monkeyseecrab.py  stream_single_frame.py  video_stream.py
color/: __init__.py
counting/Aryan/ml/: __init__.py
counting/Aryan/watershed/: __init__.py
counting/Mitchell/: main.py  test.py
crab/ram/: main.py
crab/rehaan/: main.py
helper/: monkeyseecrab.py  stream_single_frame.py
ml/: yolo.py
nicegui/: main.py
pgm/: .gitignore  README.md  hatch_build.py  pgm.py  pgm.swift  pyproject.toml
